--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,82 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Config Files
+*.ini
+
+# Binary Files
+*.dat
+
+# Addition
+# Ignore all temporary files in the root directory
+*.[oa]
+
+# Single Module Project
+/.externalToolBuilders/
+/.settings/
+/.metadata/
+/.recommenders/
+/target/
+/bin/
+/build/
+/doc/
+/lib/
+/test-output/
+/allure-results/
+/.classpath
+/.project
+/.checkstyle
+/reports/
+/.idea/
+*.iml
+*.ucls
+
+# Multi Modules Project
+/**/.externalToolBuilders/
+/**/.settings/
+/**/target/
+/**/doc/
+/**/bin/
+/**/build/
+/**/lib/
+/**/test-output/
+/**/allure-results/
+/**/report/
+/**/.classpath
+/**/.project
+/**/.checkstyle
+/**/reports
+/**/af.reporting
+/**/.idea/
+/**/*.iml
+/**/*.ucls
+/**/resources/
+
+# Ignore binary
+/.allure/
+*.bin
+*.exe
+
+
+# Ignore IntelliJ IDEA Config Files
+*.stackdump
+
+# Ignore Picture
+*.bmp
+*.png
+*.jpg
+*.jpeg
+
+# Ignore doc/notes.txt, but not doc/info/arch.txt
+# doc/*.txt
+
+# Ignore all .txt files in the directory doc/
+# doc/**/*.txt
+
+# Ignore .doc .pfd .docx .xlsx .json
+*.doc
+*.docx
+*.pdf
+*.xlsx
+*.json
